Add deployment python package and testing package

--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,15 @@ name = "pypi"
 [packages]
 flask = "*"
 environs = "*"
+supervisor = "*"
+gunicorn = "*"
+gevent = "*"
 
 [dev-packages]
 pytest = "*"
 pre-commit = "*"
 detect-secrets = "*"
+webtest = "*"
 
 [requires]
 python_version = "3.10"
